Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-11378

Video buffering status is not updated when loading a stream in qmediaplayer on the N8

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.7.0
    • 4.6.3, 4.7.0
    • (Inactive) mmfphonon
    • None
    • 56a2b631

      Device: N8
      Firmware version: 92_201022_hw79 RND
      Qt built from: qt-s60-public/4.6 da424a2e
      Platform: ARMV5 UREL
      Compiler used: ARM/Thumb C/C++ Compiler, RVCT2.2 [Build 686]
      Application: Mediaplayer demo
      Launched from: App launcher

      Steps to reproduce:
      1. Launch qmediaplayer
      2. Open an audio or video stream
      [While clip is buffered, % of buffer filled is not shown; following the same steps on the 5800, the status is updated]

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jasmcdon Jason McDonald (Closed Nokia Identity. Please assign to "macadder" instead) (Inactive)
            gastockw Gareth Stockwell
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes