Enable bufferStatus signal during video clip loading on NGA platforms

CVideoPlayerUtility::RegisterForVideoLoadingNotification() was only
called in the DSA, not the NGA, variant of the Phonon MMF backend.

Task-number: QTBUG-11378
Reviewed-by: Thierry Bastian